feat(security): implement comprehensive security overhaul and endpoint authorization hardening